Fix: Background element overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@ html {
 }
 
 html, body {
-  @apply text-white bg-zinc-900;
+  @apply text-white bg-zinc-900 overflow-x-hidden;
 }
 
 .wellcome-section {
